added font sample

--- a/sass/test.scss
+++ b/sass/test.scss
@@ -6,3 +6,11 @@ button {
   background-color: green;
   padding: 10px;
 }
+
+/* Font-family */
+@font-face {
+  font-family: "NoirPro-Medium";
+  src: url("/static/font/NoirPro-Medium.eot") format('opentype');
+  src: url("/static/font/NoirPro-Medium.woff"); 
+  src: url("/static/font/NoirPro-Medium.woff2");
+}
